# ioq3-server

./: .gitignore  CMakeLists.txt  Cargo.toml  build.sh
assets/paks/baseq3/: bots.cfg  levels.cfg  server.cfg
assets/scripts/: prepare.sh  run.sh
emc-build/: CMakeCache.txt  Makefile  cmake_install.cmake  q3_server.js  q3_server.wasm
q3_server/: Cargo.toml  build.rs  lib.rs
q3_server/src/asm/: ftola.rs  snapvector.rs  snapvector.rs.orig  snapvector.rs.rej
q3_server/src/botlib/: be_aas_bspq3.rs  be_aas_cluster.rs  be_aas_debug.rs  be_aas_entity.rs  be_aas_file.rs  be_aas_main.rs  be_aas_move.rs  be_aas_optimize.rs  be_aas_reach.rs  be_aas_route.rs  be_aas_routealt.rs  be_aas_sample.rs  be_ai_char.rs  be_ai_chat.rs  be_ai_gen.rs  be_ai_goal.rs  be_ai_move.rs  be_ai_weap.rs  be_ai_weight.rs  be_ea.rs  be_interface.rs  l_crc.rs  l_libvar.rs  l_log.rs  l_memory.rs  l_precomp.rs  l_script.rs  l_struct.rs
q3_server/src/null/: null_client.rs  null_input.rs  null_snddma.rs
q3_server/src/qcommon/: cm_load.rs  cm_patch.rs  cm_polylib.rs  cm_test.rs  cm_trace.rs  cmd.rs  common.rs  cvar.rs  files.rs  huffman.rs  ioapi.rs  md4.rs  msg.rs  net_chan.rs  net_ip.rs  q_math.rs  q_shared.rs  unzip.rs
q3_server/src/server/: sv_bot.rs  sv_ccmds.rs  sv_client.rs  sv_game.rs  sv_init.rs  sv_main.rs  sv_net_chan.rs  sv_snapshot.rs  sv_world.rs
q3_server/src/sys/: con_log.rs  con_tty.rs  sys_autoupdater.rs  sys_main.rs  sys_unix.rs
q3_server/src/vm/: vm.rs  vm_interpreted.rs  vm_x86.rs
qjs/: master-handler.js  master.js  package.json  proxy.js
quakejs/content/: content.js  package.json
quakejs/proxy/: config.json  package.json  proxy.js
quakejs/repak/: package.json  repak.js
src/: aasfile.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_def.h  be_aas_entity.c  be_aas_file.c  be_aas_main.c  be_aas_move.c  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_sample.c  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ea.c  be_interface.c  botlib.h  cm_public.h  cmd.c  common.c  con_log.c  con_tty.c  files.c  l_libvar.c  l_libvar.h  l_log.c  l_precomp.c  l_script.c  l_struct.c  l_struct.h  l_utils.h  null_client.c  (+14 more)
src/asm/: ftola.c  qasm-inline.h  snapvector.c
src/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_char.h  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_gen.h  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  be_ai_weap.c  be_ai_weap.h  (+25 more)
src/game/: g_public.h
src/null/: null_client.c  null_input.c  null_snddma.c
src/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  ioapi.c  ioapi.h  md4.c  msg.c  net_chan.c  net_ip.c  q_common.h  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  surfaceflags.h  unzip.h
src/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
src/sys/: con_log.c  con_tty.c  sys_autoupdater.c  sys_loadlib.h  sys_local.h  sys_main.c  sys_unix.c
src/vm/: vm.c  vm_interpreted.c  vm_js.js  vm_local.h  vm_x86.c
