cmake_minimum_required(VERSION 3.15)
project(q3_server C)

add_compile_definitions(ARCH_STRING=x86_64)
add_compile_definitions(QDECL=)
#add_compile_definitions(SCREWUP)
add_compile_definitions(BOTLIB)
add_compile_definitions(DEDICATED)
#add_compile_definitions(Q3_VM)

set(CMAKE_C_STANDARD 99)

add_executable(q3_server
        src/sys_autoupdater.c
        src/null_snddma.c
        src/be_ea.c
        src/be_interface.h
        src/be_aas_main.h
        src/sys_loadlib.h
        src/l_precomp.h
        src/be_ai_chat.c
        src/sv_client.c
        src/be_aas_bspq3.c
        src/cm_polylib.c
        src/l_log.c
        src/cmd.c
        src/be_aas_reach.c
        src/huffman.c
        src/cm_patch.c
        src/cm_trace.c
        src/vm_x86.c
        src/be_aas_entity.h
        src/sys_main.c
        src/sys_unix.c
        src/q_platform.h
        src/be_aas_routealt.c
        src/l_script.c
        src/be_aas_debug.h
        src/common.c
        src/sv_init.c
        src/be_ai_goal.c
        src/botlib.h
        src/be_ai_move.h
        src/cm_load.c
        src/be_aas_move.h
        src/be_aas_move.c
        src/be_aas_cluster.h
        src/surfaceflags.h
        src/be_ai_chat.h
        src/l_crc.c
        src/be_ai_goal.h
        src/l_crc.h
        src/qfiles.h
        src/be_aas_cluster.c
        src/files.c
        src/server.h
        src/sys_local.h
        src/be_aas_entity.c
        src/vm_local.h
        src/con_log.c
        src/l_utils.h
        src/unzip.c
        src/vm_interpreted.c
        src/cm_patch.h
        src/be_aas_optimize.c
        src/qasm-inline.h
        src/qcommon.h
        src/l_precomp.c
        src/unzip.h
        src/be_aas_sample.c
        src/be_ai_weight.h
        src/l_memory.h
        src/be_ai_gen.c
        src/cm_local.h
        src/cm_test.c
        src/cvar.c
        src/ioapi.h
        src/null_client.c
        src/vm.c
        src/msg.c
        src/be_aas_sample.h
        src/be_aas.h
        src/ioapi.c
        src/be_aas_file.h
        src/l_libvar.c
        src/be_aas_debug.c
        src/be_aas_def.h
        src/be_aas_main.c
        src/net_ip.c
        src/md4.c
        src/be_ai_weap.h
        src/g_public.h
        src/be_ai_char.c
        src/sv_ccmds.c
        src/l_struct.h
        src/q_shared.c
        src/l_memory.c
        src/be_interface.c
        src/sv_game.c
        src/con_tty.c
        src/sv_main.c
        src/q_shared.h
        src/sv_world.c
        src/be_aas_file.c
        src/l_script.h
        src/be_aas_route.h
        src/be_ea.h
        src/l_libvar.h
        src/sv_net_chan.c
        src/be_ai_weight.c
        src/be_ai_weap.c
        src/snapvector.c
        src/cm_public.h
        src/be_aas_route.c
        src/be_ai_move.c
        src/be_aas_routealt.h
        src/l_log.h
        src/sv_snapshot.c
        src/bg_public.h
        src/l_struct.c
        src/be_ai_gen.h
        src/be_ai_char.h
        src/aasfile.h
        src/be_aas_reach.h
        src/be_aas_bsp.h
        src/be_aas_optimize.h
        src/q_common.h
        src/ftola.c
        src/be_aas_funcs.h
        src/net_chan.c
        src/sv_bot.c
        src/null_input.c
        src/cm_polylib.h
        src/bg_lib.c
        src/bg_lib.h
        src/q_math.c
        )

target_link_libraries(q3_server m z ${CMAKE_DL_LIBS})
